--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -10,7 +10,9 @@ header {
   background-color: red;
   padding-top: 5vh;
 }
-
+.learn-group {
+  margin-bottom: 1.5rem;
+}
 .learn-item {
   .form-check.form-switch {
     position: absolute;
